Title and css change to HTML

--- a/webapp/src/main/resources/templates/main.html
+++ b/webapp/src/main/resources/templates/main.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>Train Times</title>
+    <title>Train Delays</title>
+    <style>
+        body {font-family: Arial, Helvetica, sans-serif}
+    </style>
 </head>
 <body>
 <div th:each="trainServiceInfo : ${model.trainServiceInfoList}">
