Fix to loading CSS and JS

--- a/webapp/src/main/resources/templates/main.html
+++ b/webapp/src/main/resources/templates/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Train Delays</title>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="static/css/materialize.min.css"  media="screen,projection"/>
 </head>
 <body>
 <div  class="container" th:each="trainServiceInfo : ${model.trainServiceInfoList}">
@@ -20,6 +20,6 @@
         </tbody>
     </table>
 </div>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="static/js/materialize.min.js"></script>
 </body>
 </html>
